{
    "name": "PlayerControler",
    "maps": [
        {
            "name": "TankDrive",
            "id": "c3f672a9-810e-4f66-9492-3d680fe72485",
            "actions": [
                {
                    "name": "Turbo",
                    "type": "Button",
                    "id": "aea617b4-b226-40bf-b2d4-364f5937bc6f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "255988a9-42fc-48f3-a93c-c05b36ae5cc0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SetPath",
                    "type": "Button",
                    "id": "27b63dde-70ca-46df-969d-638af953efde",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "417cfc98-1e7a-45ef-930f-c0bcaf9b92bb",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "Turbo",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0779389c-5221-4a0c-87a6-9d922cdd2b56",
                    "path": "<Keyboard>/space",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "675f6216-1258-438f-bf9d-9d93538a368f",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SetPath",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "TankAttack",
            "id": "2b7d887d-3b41-4b59-8f44-3b8a64d5b11e",
            "actions": [
                {
                    "name": "ShootAttack",
                    "type": "Button",
                    "id": "225cde7a-ff54-42f7-8e4d-86024b6ac028",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6eee167d-b427-4cd1-8955-ebd88067ff13",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShootAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Camera",
            "id": "479350e7-073e-4c6e-a536-6be3fd843bbe",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "5cf00569-0a43-48d9-97bf-1d94c29073d6",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LockCamera",
                    "type": "Button",
                    "id": "21b809df-d370-4598-9365-3e9aa6872da2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "f14527fb-7a02-4178-8104-c1f620b8902e",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "e0ffd44b-bb32-47cf-8ea6-ddaee88d631c",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "ec5203c8-418b-4947-8d8e-7a6c1e33f712",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "a8fd2ba0-0ad2-40aa-8de0-ad119190c9c2",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "9980f372-e0e7-4edd-9dc4-4bc0d11ed2fa",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "df1ad329-79c2-4bad-abcc-070b6650ffe6",
                    "path": "<Mouse>/leftButton",
                    "interactions": "MultiTap",
                    "processors": "",
                    "groups": "",
                    "action": "LockCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}